# RustNet-MNIST

./: .gitignore  Cargo.toml  README.md
src/: inspector.rs  loader.rs  loss.rs  main.rs  optimizer.rs  sequential.rs  visualizer.rs
src/layer/: activation_layer.rs  dense_layer.rs  dropout_layer.rs  mod.rs
